--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "test:library": "npm run build && node tests/library/test.js",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "commitmsg": "validate-commit-msg",
-    "prep-release": "git clean -dfx && npm install && npm run build && npm run changelog",
-    "prepare": "npm install"
+    "prep-release": "git clean -dfx && npm install && npm run build && npm run changelog"
   },
   "repository": {
     "type": "git",
@@ -62,7 +61,7 @@
     "conventional-changelog-cli": "^1.2.0",
     "cz-conventional-changelog": "^2.0.0",
     "express": "^4.14.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-insert": "^0.5.0",
     "husky": "^0.13.1",
     "jshint": "^2.9.2",
